--- a/dev/res/css-dev/layout.css
+++ b/dev/res/css-dev/layout.css
@@ -1,9 +1,10 @@
-/* line 11, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* Layout Base */
+/* line 13, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 html {
 	min-height: 100%;
 }
 
-/* line 15, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 17, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 body {
 	position: relative;
 	overflow-x: auto;
@@ -16,7 +17,7 @@ body {
 }
 
 /* Screen */
-/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 27, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .screen {
 	position: absolute;
 	top: 0;
@@ -25,40 +26,40 @@ body {
 	left: 0;
 }
 
-/* line 35, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 37, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen {
 	-webkit-transition: all .5s;
 	transition: all .5s;
 }
 
-/* line 41, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 43, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .screen-newScreen {
 	-webkit-transform: translate(100%, 0);
 	-ms-transform: translate(100%, 0);
 	transform: translate(100%, 0);
 }
 
-/* line 47, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 49, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-reverseTransition .screen-newScreen {
 	-webkit-transform: translate(-100%, 0);
 	-ms-transform: translate(-100%, 0);
 	transform: translate(-100%, 0);
 }
 
-/* line 55, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 57, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen-oldScreen {
 	-webkit-transform: translate(-100%, 0);
 	-ms-transform: translate(-100%, 0);
 	transform: translate(-100%, 0);
 }
-/* line 61, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 63, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition.is-reverseTransition .screen-oldScreen {
 	-webkit-transform: translate(100%, 0);
 	-ms-transform: translate(100%, 0);
 	transform: translate(100%, 0);
 }
 
-/* line 71, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 73, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen-newScreen {
 	-webkit-transform: translate(0, 0);
 	-ms-transform: translate(0, 0);
@@ -66,7 +67,7 @@ body {
 }
 
 /* Templates */
-/* line 81, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
+/* line 83, D:/Projects/Projects/AppX/dev/res/sass-dev/layout.scss */
 .template {
 	display: none;
 }
@@ -77,4 +78,3 @@ body {
 /* Tablet Layout */
 /* TV Layout */
 /* Audio Layout */
-/*# sourceMappingURL=layout.css.map */
