--- a/dev/templates/app.tmp.html
+++ b/dev/templates/app.tmp.html
@@ -2,7 +2,7 @@
 
 	<body>
 <!-- @tx-process:include _appTemplate-start.html --><!-- /@tx-process -->
-<!-- @tx-process:include _scriptApp.html --><!-- /@tx-process -->
+<!-- @tx-process:include _scriptsApp.html --><!-- /@tx-process -->
 	</body>
 
 </html>
