--- a/dev/res/css/styles.css
+++ b/dev/res/css/styles.css
@@ -1,23 +1,3 @@
-/* CSS Baseline */
-
-html, body {
-	padding: 0;
-	border: none;
-	margin: 0;
-	background: none;
-	font-weight: inherit;
-	font-style: inherit;
-	font-family: inherit;
-	line-height: inherit;
-	vertical-align: baseline;
-}
-
-html {
-	-webkit-overflow-scrolling: touch;
-}
-
-
-
 /* Typography & Rhythm */
 
 html {
@@ -26,58 +6,29 @@ html {
 }
 
 body {
-	counter-reset: heading;
 	color: #000000;
 	background: #ffffff;
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
 ::-webkit-selection {
-	color: white;
-	background: blue;
+	color: #ffffff;
+	background: #0000ff;
 }
 
 ::-moz-selection {
-	color: white;
-	background: blue;
+	color: #ffffff;
+	background: #0000ff;
 }
 
 ::selection {
-	color: white;
-	background: blue;
+	color: #ffffff;
+	background: #0000ff;
 }
 
 input::-moz-focus-inner, button::-moz-focus-inner {
 	padding: 0;
 	border: 0;
-}
-
-@-webkit-keyframes focusPulse {
-	0% {
-		box-shadow: 0 0 4px 1px #488dc6;
-	}
-
-	50% {
-		box-shadow: 0 0 8px 1px #488dc6;
-	}
-
-	100% {
-		box-shadow: 0 0 4px 1px #488dc6;
-	}
-}
-
-@keyframes focusPulse {
-	0% {
-		box-shadow: 0 0 4px 1px #488dc6;
-	}
-
-	50% {
-		box-shadow: 0 0 8px 1px #488dc6;
-	}
-
-	100% {
-		box-shadow: 0 0 4px 1px #488dc6;
-	}
 }
 
 /* High DPI Typography */
@@ -88,10 +39,32 @@ input::-moz-focus-inner, button::-moz-focus-inner {
 	}
 }
 
+/* Print Typography */
+
+@media print {
+	@page {
+		margin: 0 .5cm;
+	}
+
+	body {
+		width: 100%;
+		max-width: none;
+		padding: 0;
+		margin: 0;
+		color: #000000;
+		background: #ffffff;
+		font-size: 16pt;
+	}
+}
+
+
+
 /* Layout Base */
 
 html {
 	min-height: 100%;
+
+	-webkit-overflow-scrolling: touch;
 }
 
 body {
