--- a/dev/res/sass-dev/layout.scss
+++ b/dev/res/sass-dev/layout.scss
@@ -12,12 +12,13 @@
 
 html {
 	min-height: 100%;
+	-webkit-overflow-scrolling: touch;
 }
 
 body {
-	position: relative;
-	@include tx-set-boundaries;
+	@include tx-set-boundaries($min-width);
 	@include tx-scroll-bar(true);
+	position: relative;
 }
 
 
@@ -30,32 +31,26 @@ body {
 	bottom: 0;
 	left: 0;
 	right: 0;
+
+	&-newScreen {
+		transform: translate(100%, 0);
+	}
+
 }
 
 .is-screenTransition {
 
 	.screen {
-		transition: all $screen-transition;
-	}
+		transition: $screen-transition;
+	
+		&-newScreen {
+			transform: translate(0, 0);
+		}
 
-}
+		&-oldScreen {
+			transform: translate(-100%, 0);
+		}
 
-.screen-newScreen {
-	transform: translate(100%, 0);
-}
-
-.is-reverseTransition {
-
-	.screen-newScreen {
-		transform: translate(-100%, 0);
-	}
-
-}
-
-.is-screenTransition {
-
-	.screen-oldScreen {
-		transform: translate(-100%, 0);
 	}
 
 	&.is-reverseTransition {
@@ -68,10 +63,10 @@ body {
 
 }
 
-.is-screenTransition {
+.is-reverseTransition {
 
 	.screen-newScreen {
-		transform: translate(0, 0);
+		transform: translate(-100%, 0);
 	}
 
 }
@@ -108,9 +103,9 @@ body {
 
 /* Tablet Layout */
 
-@media only screen and (min-width: 721px) and (max-width: 1024px) {}
+@media only screen and (min-width: 721px) and (max-width: $min-width) {}
 
-@media only screen and (min-width: 721px) and (max-width: 1024px) and (min-resolution: 1.5dppx), only screen and (min-width: 721px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: 1024px) and (min--moz-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: 1024px) and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-width: 721px) and (max-width: 1024px) and (min-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: 1024px) and (min-resolution: 150dpi) {}
+@media only screen and (min-width: 721px) and (max-width: $min-width) and (min-resolution: 1.5dppx), only screen and (min-width: 721px) and (max-width: $min-width) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: $min-width) and (min--moz-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: $min-width) and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-width: 721px) and (max-width: $min-width) and (min-device-pixel-ratio: 1.5), only screen and (min-width: 721px) and (max-width: $min-width) and (min-resolution: 150dpi) {}
 
 
 
