--- a/dev/res/css/styles.css
+++ b/dev/res/css/styles.css
@@ -21,6 +21,11 @@ body {
 	background: #0000ff;
 }
 
+::-moz-selection {
+	color: #ffffff;
+	background: #0000ff;
+}
+
 ::selection {
 	color: #ffffff;
 	background: #0000ff;
@@ -37,6 +42,11 @@ input::-moz-focus-inner, button::-moz-focus-inner {
 	html {
 		text-rendering: optimizelegibility;
 	}
+}
+
+/* Phone Typography */
+
+@media handheld, only screen and (max-width: 720px) {
 }
 
 /* Print Typography */
@@ -62,9 +72,8 @@ input::-moz-focus-inner, button::-moz-focus-inner {
 /* Layout Base */
 
 html {
-	min-height: 100%;
-
 	-webkit-overflow-scrolling: touch;
+	min-height: 100%;
 }
 
 body {
