--- a/dev/res/css-dev/layout.css
+++ b/dev/res/css-dev/layout.css
@@ -1,10 +1,11 @@
 /* Layout Base */
+/* line 13, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 html {
+	-webkit-overflow-scrolling: touch; 
 	min-height: 100%;
-
-	-webkit-overflow-scrolling: touch;
 }
 
+/* line 18, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 body {
 	position: relative; 
 	overflow-x: auto;
@@ -17,6 +18,7 @@ body {
 }
 
 /* Screen */
+/* line 28, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .screen {
 	position: absolute;
 	top: 0;
@@ -24,32 +26,38 @@ body {
 	bottom: 0;
 	left: 0;
 }
+/* line 35, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .screen-newScreen {
 	-webkit-transform: translate(100%, 0);
 	-ms-transform: translate(100%, 0);
 	transform: translate(100%, 0);
 }
 
+/* line 43, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen {
 	-webkit-transition: .5s;
 	transition: .5s;
 }
+/* line 46, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen-newScreen {
 	-webkit-transform: translate(0, 0);
 	-ms-transform: translate(0, 0);
 	transform: translate(0, 0);
 }
+/* line 50, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition .screen-oldScreen {
 	-webkit-transform: translate(-100%, 0);
 	-ms-transform: translate(-100%, 0);
 	transform: translate(-100%, 0);
 }
+/* line 58, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-screenTransition.is-reverseTransition .screen-oldScreen {
 	-webkit-transform: translate(100%, 0);
 	-ms-transform: translate(100%, 0);
 	transform: translate(100%, 0);
 }
 
+/* line 68, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .is-reverseTransition .screen-newScreen {
 	-webkit-transform: translate(-100%, 0);
 	-ms-transform: translate(-100%, 0);
@@ -57,6 +65,7 @@ body {
 }
 
 /* Templates */
+/* line 78, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/layout.scss */
 .template {
 	display: none;
 }
