--- a/dev/res/css/critical.css
+++ b/dev/res/css/critical.css
@@ -19,6 +19,11 @@ body {
 	background: #0000ff;
 }
 
+::-moz-selection {
+	color: #ffffff;
+	background: #0000ff;
+}
+
 ::selection {
 	color: #ffffff;
 	background: #0000ff;
@@ -52,9 +57,8 @@ body {
 
 
 html {
-	min-height: 100%;
-
 	-webkit-overflow-scrolling: touch;
+	min-height: 100%;
 }
 
 body {
