--- a/dev/res/css/critical.css
+++ b/dev/res/css/critical.css
@@ -1,27 +1,30 @@
 html {
 	font-size: 100%;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 	line-height: 1.5em;
+
+	text-size-adjust: 100%;
 }
 
 body {
 	color: #000000;
-	background: #ffffff;
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
 ::-webkit-selection {
 	color: #ffffff;
-	background: #0000ff;
+	background: #003b9e;
 }
 
 ::-moz-selection {
 	color: #ffffff;
-	background: #0000ff;
+	background: #003b9e;
 }
 
 ::selection {
 	color: #ffffff;
-	background: #0000ff;
+	background: #003b9e;
 }
 
 
@@ -32,23 +35,6 @@ body {
 	}
 }
 
-
-
-@media print {
-	@page {
-		margin: 0 .5cm;
-	}
-
-	body {
-		width: 100%;
-		max-width: none;
-		padding: 0;
-		margin: 0;
-		color: #000000;
-		background: #ffffff;
-		font-size: 16pt;
-	}
-}
 
 
 html {
@@ -65,4 +51,5 @@ body {
 	min-height: 100%;
 	max-width: 1400px;
 	margin: 0 auto;
+	background: #ffffff;
 }
