--- a/dev/res/css/styles.css
+++ b/dev/res/css/styles.css
@@ -2,33 +2,31 @@
 
 html {
 	font-size: 100%;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 	line-height: 1.5em;
+
+	text-size-adjust: 100%;
 }
 
 body {
 	color: #000000;
-	background: #ffffff;
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
 ::-webkit-selection {
 	color: #ffffff;
-	background: #0000ff;
+	background: #003b9e;
 }
 
 ::-moz-selection {
 	color: #ffffff;
-	background: #0000ff;
+	background: #003b9e;
 }
 
 ::selection {
 	color: #ffffff;
-	background: #0000ff;
-}
-
-input::-moz-focus-inner, button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
+	background: #003b9e;
 }
 
 /* High DPI Typography */
@@ -39,25 +37,11 @@ input::-moz-focus-inner, button::-moz-focus-inner {
 	}
 }
 
-/* Print Typography */
+/* Phone Typography */
 
-@media print {
-	@page {
-		margin: 0 .5cm;
-	}
-
-	body {
-		width: 100%;
-		max-width: none;
-		padding: 0;
-		margin: 0;
-		color: #000000;
-		background: #ffffff;
-		font-size: 16pt;
-	}
+@media handheld, only screen and (max-width: 720px) {
+	/* Typography & Rhythm */
 }
-
-
 
 /* Layout Base */
 
@@ -75,10 +59,18 @@ body {
 	min-height: 100%;
 	max-width: 1400px;
 	margin: 0 auto;
+	background: #ffffff;
 }
 
 /* Templates */
 
 .template {
 	display: none;
+}
+
+/* Forms */
+
+input::-moz-focus-inner, button::-moz-focus-inner {
+	padding: 0;
+	border: 0;
 }
