--- a/dev/res/sass-dev/layout.scss
+++ b/dev/res/sass-dev/layout.scss
@@ -1,6 +1,8 @@
 @import "tx/tx";
-@import "tx/tx-project";
 @import "tx/tx-projectImages";
+
+@import "project";
+@import "project-global";
 
 
 
@@ -19,6 +21,7 @@ body {
 	@include tx-set-boundaries($min-width);
 	@include tx-scroll-bar(true);
 	position: relative;
+	background: $background;
 }
 
 
@@ -41,7 +44,7 @@ body {
 .is-screenTransition {
 
 	.screen {
-		transition: $transitionUIScreen;
+		transition: $UITransitionScreen;
 
 		&-newScreen {
 			transform: translate(0, 0);
@@ -95,7 +98,11 @@ body {
 
 /* Phone Layout */
 
-@media handheld, only screen and (max-width: 720px) {}
+@media handheld, only screen and (max-width: 720px) {
+
+	@import "phone/layout-phone";
+
+}
 
 @media only screen and (max-width: 720px) and (min-resolution: 1.5dppx),	only screen and (max-width: 720px) and (-webkit-min-device-pixel-ratio: 1.5),	only screen and (max-width: 720px) and (min--moz-device-pixel-ratio: 1.5),	only screen and (max-width: 720px) and (-o-min-device-pixel-ratio: 3 / 2),	only screen and (max-width: 720px) and (min-device-pixel-ratio: 1.5), only screen and (max-width: 720px) and (min-resolution: 150dpi) {}
 
