--- a/dev/templates/_scripts.html
+++ b/dev/templates/_scripts.html
@@ -2,5 +2,6 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- @tx-js -->
+		<script type="text/javascript" src="res/js-dev/rAF.js"></script>
 		<script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
 		<!-- /@tx-js -->
