--- a/dev/templates/_scriptsApp.html
+++ b/dev/templates/_scriptsApp.html
@@ -2,6 +2,7 @@
 		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
 		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
 		<!-- @tx-js -->
+		<script type="text/javascript" src="res/js-dev/rAF.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.screens.js"></script>
 		<script type="text/javascript" src="res/js-dev/app.routes.js"></script>
