--- a/dev/res/css/styles.css
+++ b/dev/res/css/styles.css
@@ -10,23 +10,8 @@ html {
 }
 
 body {
-	color: #000000;
+	color: #333333;
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
-}
-
-::-webkit-selection {
-	color: #ffffff;
-	background: #003b9e;
-}
-
-::-moz-selection {
-	color: #ffffff;
-	background: #003b9e;
-}
-
-::selection {
-	color: #ffffff;
-	background: #003b9e;
 }
 
 /* High DPI Typography */
@@ -66,6 +51,23 @@ body {
 
 .template {
 	display: none;
+}
+
+/* Selection */
+
+::-webkit-selection {
+	color: #ffffff;
+	background: #337ab7;
+}
+
+::-moz-selection {
+	color: #ffffff;
+	background: #337ab7;
+}
+
+::selection {
+	color: #ffffff;
+	background: #337ab7;
 }
 
 /* Forms */
