--- a/dev/templates/_scriptsApp.html
+++ b/dev/templates/_scriptsApp.html
@@ -1,10 +1,9 @@
-		<script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
-		<script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
-		<script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
-		<!-- @tx-js -->
-		<script type="text/javascript" src="res/js-dev/rAF.js"></script>
-		<script type="text/javascript" src="res/js-dev/app.js"></script>
-		<script type="text/javascript" src="res/js-dev/app.screens.js"></script>
-		<script type="text/javascript" src="res/js-dev/app.routes.js"></script>
-		<script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
-		<!-- /@tx-js -->
+    <!-- @tx-critical -->
+<!-- @tx-process:include _scriptsVendor.html --><!-- /@tx-process -->
+    <!-- @tx-js -->
+    <script type="text/javascript" src="res/js-dev/rAF.min.js"></script>
+    <script type="text/javascript" src="res/js-dev/app.js"></script>
+    <script type="text/javascript" src="res/js-dev/app.screens.js"></script>
+    <script type="text/javascript" src="res/js-dev/app.routes.js"></script>
+    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
+    <!-- /@tx-js -->
