--- a/dev/res/sass-dev/utilities.scss
+++ b/dev/res/sass-dev/utilities.scss
@@ -5,29 +5,29 @@
 /* Lists Reset */
 
 .u-listReset, .u-descriptionListReset {
-	margin: 0;
-	padding: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .u-listReset {
-	list-style: none outside;
+  list-style: none outside;
 
-	&>li {
-		margin: 0;
-		padding: 0;
-		background: none;
-	}
+  >li {
+    padding: 0;
+    margin: 0;
+    background: none;
+  }
 
 }
 
 .u-descriptionListReset {
 
-	&>dt, &>dd {
-		margin: 0;
-		padding: 0;
-		font-weight: normal;
-		font-style: normal;
-	}
+  >dt, >dd {
+    padding: 0;
+    margin: 0;
+    font-weight: normal;
+    font-style: normal;
+  }
 
 }
 
@@ -36,7 +36,7 @@
 /* Image Blocker */
 
 .u-imageBlocker {
-	background-image: none !important;
+  background-image: none !important;
 }
 
 
@@ -44,13 +44,13 @@
 /* Visually Hidden */
 
 .u-visuallyHidden {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	padding: 0;
-	border: 0;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	clip: rect(0 0 0 0);
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  margin: -1px;
 }
