--- a/dev/res/css-dev/layout.css
+++ b/dev/res/css-dev/layout.css
@@ -17,17 +17,24 @@ body {
 }
 
 /* Screen */
+.screen-newScreen, .is-screenTransition.is-reverseTransition .screen-oldScreen {
+  -webkit-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  transform: translate(100%, 0);
+}
+
+.is-screenTransition .screen-oldScreen, .is-reverseTransition .screen-newScreen {
+  -webkit-transform: translate(-100%, 0);
+  -ms-transform: translate(-100%, 0);
+  transform: translate(-100%, 0);
+}
+
 .screen {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-}
-.screen-newScreen {
-  -webkit-transform: translate(100%, 0);
-  -ms-transform: translate(100%, 0);
-  transform: translate(100%, 0);
 }
 
 .is-screenTransition .screen {
@@ -38,23 +45,6 @@ body {
   -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   transform: translate(0, 0);
-}
-.is-screenTransition .screen-oldScreen {
-  -webkit-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  transform: translate(-100%, 0);
-}
-
-.is-screenTransition.is-reverseTransition .screen-oldScreen {
-  -webkit-transform: translate(100%, 0);
-  -ms-transform: translate(100%, 0);
-  transform: translate(100%, 0);
-}
-
-.is-reverseTransition .screen-newScreen {
-  -webkit-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  transform: translate(-100%, 0);
 }
 
 /* Templates */
