--- a/dev/res/sass-dev/project/_project-colors.scss
+++ b/dev/res/sass-dev/project/_project-colors.scss
@@ -18,7 +18,7 @@ $text: $black;
 $link: $blue;
 $visited: $purple;
 $hover: $blueDark;
-$active: $blueDark;
+$active: $red;
 $focus-outlineColor: $gray;
 
 $background: $white;
