--- a/dev/templates/app.tmp.html
+++ b/dev/templates/app.tmp.html
@@ -1,6 +1,7 @@
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
   <body>
+    <h1>AppX</h1>
 <!-- @tx-process:include _appTemplate-start.html --><!-- /@tx-process -->
 <!-- @tx-process:include _scriptsApp.html --><!-- /@tx-process -->
   </body>
