--- a/dev/templates/index.tmp.html
+++ b/dev/templates/index.tmp.html
@@ -1,6 +1,7 @@
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
   <body>
+    <h1>AppX</h1>
 <!-- @tx-process:include _scripts.html --><!-- /@tx-process -->
   </body>
 
