--- a/dev/res/sass-dev/layout.scss
+++ b/dev/res/sass-dev/layout.scss
@@ -1,4 +1,4 @@
-@import "project/project";
+@import 'project/project';
 
 
 
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  @include tx-set-boundaries($min-width);
+  @include tx-set-boundaries($desktop-min);
   @include tx-scroll-bar(true);
   position: relative;
   background: $background;
@@ -48,7 +48,7 @@ body {
 .is-screenTransition {
 
   .screen {
-    transition: $UITransitionScreen;
+    transition: $UITransition-screen;
 
     &-newScreen {
       transform: translate(0, 0);
@@ -96,27 +96,39 @@ body {
 
 /* Large Resolution Layout */
 
-@media only screen and (min-width: 1382px) {}
-
-
-
-/* Phone Layout */
-
-@media handheld, only screen and (max-width: 719px) {
-
-  @import "phone/layout-phone";
-
-}
-
-@media only screen and (max-width: 719px) and (min-resolution: 1.5dppx),  only screen and (max-width: 719px) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (max-width: 719px) and (min--moz-device-pixel-ratio: 1.5),  only screen and (max-width: 719px) and (-o-min-device-pixel-ratio: 3 / 2),  only screen and (max-width: 719px) and (min-device-pixel-ratio: 1.5), only screen and (max-width: 719px) and (min-resolution: 150dpi) {}
+@media only screen and (min-width: $desktop-wide-rem) {}
 
 
 
 /* Tablet Layout */
 
-@media only screen and (min-width: 720px) and (max-width: $min-width) {}
+@media only screen and (max-width: $desktop-min-rem) {}
 
-@media only screen and (min-width: 720px) and (max-width: $min-width) and (min-resolution: 1.5dppx), only screen and (min-width: 720px) and (max-width: $min-width) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-width: 720px) and (max-width: $min-width) and (min--moz-device-pixel-ratio: 1.5), only screen and (min-width: 720px) and (max-width: $min-width) and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-width: 720px) and (max-width: $min-width) and (min-device-pixel-ratio: 1.5), only screen and (min-width: 720px) and (max-width: $min-width) and (min-resolution: 150dpi) {}
+@media only screen and (max-width: $desktop-min-rem) and (min-resolution: 1.5dppx), only screen and (max-width: $desktop-min-rem) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (max-width: $desktop-min-rem) and (min--moz-device-pixel-ratio: 1.5), only screen and (max-width: $desktop-min-rem) and (-o-min-device-pixel-ratio: 3 / 2), only screen and (max-width: $desktop-min-rem) and (min-device-pixel-ratio: 1.5), only screen and (max-width: $desktop-min-rem) and (min-resolution: 150dpi) {}
+
+
+
+/* Phone Layout */
+
+@media handheld, only screen and (max-width: $phone-max-rem) {
+
+  @import 'phone/layout-phone';
+
+}
+
+@media only screen and (max-width: $phone-max-rem) and (min-resolution: 1.5dppx), only screen and (max-width: $phone-max-rem) and (-webkit-min-device-pixel-ratio: 1.5), only screen and (max-width: $phone-max-rem) and (min--moz-device-pixel-ratio: 1.5), only screen and (max-width: $phone-max-rem) and (-o-min-device-pixel-ratio: 3 / 2), only screen and (max-width: $phone-max-rem) and (min-device-pixel-ratio: 1.5), only screen and (max-width: $phone-max-rem) and (min-resolution: 150dpi) {}
+
+
+
+/* Standalone Layout */
+
+@media all and (display-mode: standalone) {}
+
+
+
+/* Fullscreen Layout */
+
+@media all and (display-mode: fullscreen) {}
 
 
 
