--- a/dev/res/sass-dev/project/_project-colors.scss
+++ b/dev/res/sass-dev/project/_project-colors.scss
@@ -23,5 +23,10 @@ $focus-outlineColor: $gray;
 
 $background: $white;
 
+$placeholder-color: $gray;
+
 $selection-color: $white;
 $selection-background: $blue;
+
+$print-color: $black;
+$print-background: $white;
