--- a/dev/templates/_scriptsApp.html
+++ b/dev/templates/_scriptsApp.html
@@ -1,9 +1,8 @@
-    <!-- @tx-critical -->
 <!-- @tx-process:include _scriptsVendor.html --><!-- /@tx-process -->
     <!-- @tx-js -->
-    <script type="text/javascript" src="res/js-dev/rAF.min.js"></script>
-    <script type="text/javascript" src="res/js-dev/app.js"></script>
-    <script type="text/javascript" src="res/js-dev/app.screens.js"></script>
-    <script type="text/javascript" src="res/js-dev/app.routes.js"></script>
-    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
+    <script type="text/javascript" src="res/js-dev/rAF.min.js" defer></script>
+    <script type="text/javascript" src="res/js-dev/app.js" defer></script>
+    <script type="text/javascript" src="res/js-dev/app.screens.js" defer></script>
+    <script type="text/javascript" src="res/js-dev/app.routes.js" defer></script>
+    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js" defer></script>
     <!-- /@tx-js -->
