--- a/dev/templates/_scriptsVendor.html
+++ b/dev/templates/_scriptsVendor.html
@@ -1,4 +1,4 @@
-    <script type="text/javascript" src="res/js/jQuery/jquery.min.js"></script>
-    <script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js"></script>
-    <script type="text/javascript" src="res/js/BackboneJS/backbone.min.js"></script>
-    <script type="text/javascript" src="res/js/FontFaceObserver/fontfaceobserver.min.js"></script>
+    <script type="text/javascript" src="res/js/jQuery/jquery.min.js" defer></script>
+    <script type="text/javascript" src="res/js/UnderscoreJS/underscore.min.js" defer></script>
+    <script type="text/javascript" src="res/js/BackboneJS/backbone.min.js" defer></script>
+    <script type="text/javascript" src="res/js/FontFaceObserver/fontfaceobserver.min.js" defer></script>
