--- a/dev/res/css-dev/ui.css
+++ b/dev/res/css-dev/ui.css
@@ -1,34 +1,59 @@
 /* Selection */
-::-webkit-selection {
-  color: #ffffff;
-  background: #337ab7;
-}
-
 ::-moz-selection {
   color: #ffffff;
   background: #337ab7;
 }
-
 ::selection {
   color: #ffffff;
   background: #337ab7;
 }
 
+/* Links */
+a {
+  color: #337ab7;
+  text-decoration: underline;
+  -webkit-text-decoration-color: rgba(51, 122, 183, .5);
+  -moz-text-decoration-color: rgba(51, 122, 183, .5);
+  text-decoration-color: rgba(51, 122, 183, .5);
+  -webkit-transition: .15s;
+  transition: .15s;
+}
+a:visited {
+  color: #6f5499;
+  -webkit-text-decoration-color: rgba(111, 84, 153, .5);
+  -moz-text-decoration-color: rgba(111, 84, 153, .5);
+  text-decoration-color: rgba(111, 84, 153, .5);
+}
+a:hover {
+  color: #23527c;
+  -webkit-text-decoration-color: rgba(35, 82, 124, .5);
+  -moz-text-decoration-color: rgba(35, 82, 124, .5);
+  text-decoration-color: rgba(35, 82, 124, .5);
+}
+a:active {
+  color: #d9534f;
+  -webkit-text-decoration-color: rgba(217, 83, 79, .5);
+  -moz-text-decoration-color: rgba(217, 83, 79, .5);
+  text-decoration-color: rgba(217, 83, 79, .5);
+}
+a:focus {
+  outline: 1px dotted #cccccc;
+}
+
 /* Forms */
+label {
+  border-bottom: 1px dotted #cccccc;
+  cursor: pointer;
+}
+
 input, select, button, textarea {
   margin: 0;
-  font-size: 1em;
+  font-size: 1rem;
   font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
 input, button, textarea {
   box-sizing: content-box;
-}
-
-input[disabled], input[readonly], select[disabled], select[readonly], textarea[disabled], textarea[readonly] {
-  opacity: .5;
-  cursor: default;
-  cursor: not-allowed;
 }
 
 input, button {
@@ -39,28 +64,54 @@ input::-moz-focus-inner, button::-moz-focus-inner {
   border: 0;
 }
 
-input, select {
-  vertical-align: baseline;
-}
-
-button, select {
+select, button {
   text-transform: none;
 }
 
-.field {
+input, select {
+  vertical-align: top;
+}
+
+select, textarea, .field {
   border: 1px solid #cccccc;
 }
 
+input[type="radio"], input[type="checkbox"] {
+  box-sizing: border-box;
+  vertical-align: middle;
+}
+
+input[type="search"], input[type="number"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input[disabled], input[readonly], button[disabled], textarea[disabled], textarea[readonly] {
+  opacity: .5;
+  cursor: default;
+  cursor: not-allowed;
+}
+
+input[type="file"] {
+  height: auto;
+  border: 0;
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 select {
-  height: 2.25em;
+  height: 2.25rem;
   vertical-align: top;
 }
 select[multiple] {
-  height: 7.5em;
+  height: 7.5rem;
 }
 
 button, .button {
-  height: 1.5em;
+  height: 2.25rem;
   padding: 0 15px;
   cursor: pointer;
 }
@@ -68,44 +119,23 @@ button, .button {
 textarea {
   display: block;
   overflow: auto; 
-  height: 13.375em;
-  padding: .75em 15px;
-  line-height: 1.5em;
+  height: 13.375rem;
+  padding: .75rem 15px;
 }
 
 /* Custom Forms */
-.input-radio, .input-checkbox {
-  box-sizing: border-box;
-  vertical-align: middle;
-}
-
-.input-file {
-  height: auto;
-  border: 0;
-}
-
-.input-search, .input-number {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.input-number::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
 .field {
-  height: 2.125em;
+  height: 2.125rem;
   padding: 0 15px;
-  line-height: 2.125em;
-  vertical-align: top;
 }
 
 /* Buttons */
-/* High DPI UI */
+/* HDPI UI */
 /* Large Resolution UI */
-/* Phone UI */
 /* Tablet UI */
+/* Phone UI */
+/* Standalone UI */
+/* Fullscreen UI */
 /* TV UI */
 /* Audio UI */
 /*# sourceMappingURL=ui.css.map */
