--- a/dev/res/sass-dev/project/_project-layout.scss
+++ b/dev/res/sass-dev/project/_project-layout.scss
@@ -1,4 +1,13 @@
 // Layout
 
-$min-width: 980px;
+$desktop-min: 980px;
+$desktop-wide: 1366px;
+$desktop-max: 1920px;
+$phone-max: 720px;
+
+$desktop-min-rem: #{($desktop-min / $fontSize) * $fontSizeQuotient}em;
+$desktop-wide-rem: #{($desktop-wide / $fontSize) * $fontSizeQuotient}em;
+$desktop-max-rem: #{($desktop-max / $fontSize) * $fontSizeQuotient}em;
+$phone-max-rem: #{($phone-max / $fontSize) * $fontSizeQuotient}em;
+
 $gap: 30px;
