--- a/dev/res/sass-dev/project/_project-ui.scss
+++ b/dev/res/sass-dev/project/_project-ui.scss
@@ -1,5 +1,12 @@
-// UI
+// Transitions
 
-$UITransition: .25s;
-$UITransitionScreen: .5s;
-$UITransitionInstant: .0001s;
+$UITransition: .15s;
+$UITransition-instant: .0001s;
+$UITransition-screen: .5s;
+
+
+
+// Fields
+
+$field-borderWidth: 1px;
+$field-borderColor: $gray;
