--- a/dev/res/sass-dev/utilities.scss
+++ b/dev/res/sass-dev/utilities.scss
@@ -4,29 +4,38 @@
 
 /* Lists Reset */
 
-.u-listReset, .u-descriptionListReset {
+%u-listResetStyle {
   padding: 0;
   margin: 0;
 }
 
 .u-listReset {
+  @extend %u-listResetStyle;
   list-style: none outside;
 
   >li {
     padding: 0;
     margin: 0;
-    background: none;
   }
 
 }
 
-.u-descriptionListReset {
+%dlResetStyle {
+  padding: 0;
+  margin: 0;
+  font-weight: normal;
+  font-style: normal;
+}
 
-  >dt, >dd {
-    padding: 0;
-    margin: 0;
-    font-weight: normal;
-    font-style: normal;
+.u-descriptionListReset {
+  @extend %u-listResetStyle;
+
+  >dt {
+    @extend %dlResetStyle;
+  }
+
+  >dd {
+    @extend %dlResetStyle;
   }
 
 }
