--- a/dev/templates/_head.html
+++ b/dev/templates/_head.html
@@ -7,19 +7,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="title" content="@tx-title">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <link rel="manifest" href="/manifest.json">
     <link type="text/plain" rel="author" href="/humans.txt">
-    <meta name="copyright" content="All Rights Reserved.">
-    <meta name="google-site-verification" content="">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="cleartype" content="on">
     <!-- @tx-css -->
-    <link rel="stylesheet" type="text/css" href="res/css-dev/typography.css">
+    <link rel="stylesheet" type="text/css" href="res/css-dev/baseline.css">
     <link rel="stylesheet" type="text/css" href="res/css-dev/utilities.css">
     <link rel="stylesheet" type="text/css" href="res/css-dev/layout.css">
     <link rel="stylesheet" type="text/css" href="res/css-dev/ui.css">
@@ -27,7 +24,7 @@
     <!-- /@tx-css -->
     <script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="apple-touch-icon-114x114.png">
+    <!-- <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="apple-touch-icon-144x144.png">
@@ -42,9 +39,5 @@
     <link rel="apple-touch-startup-image" media="(device-width: 1536px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" type="image/jpeg" href="apple-touch-startup-image-2048x1536.jpg">
     <meta name="msapplication-TileColor" content="#3c3b3c">
     <meta name="msapplication-TileImage" content="msTileIcon.png">
-    <link rel="icon" type="image/png" sizes="195x195" href="operaSpeedDial.png">
-    <link rel="icon" type="image/png" sizes="228x288" href="operaCoast.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="googleTV.png">
-    <link rel="icon" type="image/png" sizes="128x128" href="chromeWebStore.png">
-    <link rel="image_src" href="thumbnail.jpg">
+    <meta name="theme-color" content="#3c3b3c"> -->
   </head>
