--- a/dev/templates/_scripts.html
+++ b/dev/templates/_scripts.html
@@ -1,6 +1,5 @@
-    <!-- @tx-critical -->
 <!-- @tx-process:include _scriptsVendor.html --><!-- /@tx-process -->
     <!-- @tx-js -->
-    <script type="text/javascript" src="res/js-dev/rAF.min.js"></script>
-    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js"></script>
+    <script type="text/javascript" src="res/js-dev/rAF.min.js" defer></script>
+    <script type="text/javascript" src="res/js-dev/tx/tx-debug.js" defer></script>
     <!-- /@tx-js -->
