--- a/dev/res/css-dev/baseline.css
+++ b/dev/res/css-dev/baseline.css
@@ -1,8 +1,9 @@
 /* Baseline Styles, Typography & Rhythm */
 html {
   font-size: 16px;
-  -webkit-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%; 
   line-height: 24px;
   line-height: 1.5rem;
 }
@@ -134,7 +135,6 @@ var {
 blockquote, q {
   quotes: none;
 }
-
 blockquote:before, q:before, blockquote:after, q:after {
   content: none;
 }
@@ -218,6 +218,7 @@ img {
   max-width: 100%;
   border: 0;
   vertical-align: top;
+  -ms-interpolation-mode: bicubic;
 }
 
 caption {
