--- a/dev/res/css/styles.css
+++ b/dev/res/css/styles.css
@@ -5,8 +5,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  line-height: 24px;
-  line-height: 1.5rem;
+  line-height: 1.5;
 }
 
 body {
@@ -35,41 +34,41 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   margin: 1.5rem 0 3rem;
-  font-size: 2rem;
-  line-height: 3rem;
+  font-size: 2.48832rem;
+  line-height: 1.20563;
 }
 
 h2 {
   margin: 1.5rem 0;
-  font-size: 1.5rem;
-  line-height: 3rem;
+  font-size: 2.0736rem;
+  line-height: 1.44676;
 }
 
 h3 {
   margin: 1.5rem 0;
-  font-size: 1.375rem;
-  line-height: 1.5rem;
+  font-size: 1.728rem;
+  line-height: 1.73611;
 }
 
 h4 {
   margin: 1.5rem 0;
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+  font-size: 1.44rem;
+  line-height: 1.04167;
 }
 
 h5 {
   margin: 1.5rem 0;
-  font-size: 1.125rem;
-  line-height: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.25;
 }
 
 h6 {
   margin: 1.5rem 0;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.5;
 }
 
-p, dl, ul, ol, li, pre, address, table {
+p, dl, ul, ol, pre, address, table {
   margin: 1.5rem 0;
 }
 
@@ -97,6 +96,10 @@ ol {
 
 li > ul {
   margin: 1.5rem 0 1.5rem 1.5em;
+}
+
+li {
+  margin: .75rem 0;
 }
 
 blockquote, em, cite {
@@ -191,7 +194,7 @@ sub {
 }
 
 big {
-  font-size: 1.5rem;
+  font-size: 2.0736rem;
   line-height: 0;
 }
 
@@ -270,7 +273,7 @@ body {
   overflow-x: auto;
   overflow-y: scroll;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  min-width: 920px;
+  min-width: 61.25em-60px;
   min-height: 100%;
   max-width: 1920px;
   padding: 0 30px;
