--- a/dev/res/templates/app.html
+++ b/dev/res/templates/app.html
@@ -1,8 +1,8 @@
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
   <body>
-    <h1>AppX</h1>
-    <!-- @tx-process:include screens/_appTemplate-start.html --><!-- /@tx-process -->
+    <div id="app"></div>
+    <!-- @tx-process:include screens/_template-start.html --><!-- /@tx-process -->
     <!-- @tx-process:include _scripts.html --><!-- /@tx-process -->
   </body>
 
