--- a/dev/res/sass/styles.scss
+++ b/dev/res/sass/styles.scss
@@ -4,3 +4,5 @@
 @import 'components/_utilities';
 @import 'components/_layout';
 @import 'components/_ui';
+@import 'components/_standalone';
+@import 'components/_fullscreen';
