--- a/dev/res/templates/404.html
+++ b/dev/res/templates/404.html
@@ -23,7 +23,7 @@
       var GOOG_FIXURL_LANG = 'ru';
       var GOOG_FIXURL_SITE = location.host;
     </script>
-    <script type="text/javascript" src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
+    <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js" type="text/javascript"></script>
   </body>
 
 </html>
