--- a/dev/res/templates/components/_scripts.html
+++ b/dev/res/templates/components/_scripts.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="res/js/appx.js" defer></script>
+<script src="res/js/appx.js" type="text/javascript" defer></script>
