--- a/dev/res/templates/components/head/_head.html
+++ b/dev/res/templates/components/head/_head.html
@@ -3,21 +3,20 @@
 <html class="mdz-no-js" lang="@tx-language">
 
   <head>
-    <title>@tx-title</title>
-    <meta name="title" content="@tx-title">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
+    <title>@tx-title Project</title>
+    <meta name="title" content="@tx-title Project">
+    <meta name="application-name" content="@tx-title Project">
+    <!-- @tx-process:include head/_head-CSS.html --><!-- /@tx-process -->
+    <!-- @tx-process:include head/_head-Modernizr.html --><!-- /@tx-process -->
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="cleartype" content="on">
-    <link rel="manifest" href="/manifest.json">
-    <link type="text/plain" rel="author" href="/humans.txt">
-    <link rel="stylesheet" type="text/css" href="res/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="res/css/tx/tx-debug.css">
-    <script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
+    <!-- @tx-process:include head/_head-app.html --><!-- /@tx-process -->
+    <link href="/manifest.json" rel="manifest">
+    <link href="/humans.txt" type="text/plain" rel="author">
     <!-- @tx-process:include _head-favicons.html --><!-- /@tx-process -->
     <!-- @tx-process:include _head-appIcons.html --><!-- /@tx-process -->
     <!-- @tx-process:include _head-appScreens.html --><!-- /@tx-process -->
